JvmtiEnvBase doesn't zero _ext_event_callbacks

XMLWordPrintable

    • b24

        There are checks for null value in processing JVMTI extension events, e.g. https://github.com/openjdk/jdk/blob/03db82818b905f21cb5ad1d56a687e238b4a6e33/src/hotspot/share/prims/jvmtiExport.cpp#L1469

        But it seems like `_ext_event_callbacks` struct is never zeroed.

              Assignee:
              Roman Marchenko
              Reporter:
              Roman Marchenko
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: