8319961: JvmtiEnvBase doesn't zero _ext_event_callbacks

Backport-of: 97ea5bf0ffafaf8009c19483b9a9b1c30401cf9a